--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,33 +1,17 @@
-name: test_packages
+name: Java CI
 
-on:
-  workflow_dispatch:
-
-## global configuration
-env:
-  GITHUB_WORKFLOW_RUN_ID: "${{ github.run_id }}.${{ github.run_number }}" ## used for container image tag
-
-## concurreny lock (optional)
-concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
+on: workflow_dispatch:
 
 jobs:
   build:
-    name: build
     runs-on: ubuntu-latest
+
     steps:
-      - name: Check out repository
-        uses: actions/checkout@v3
-      - name: build-docker
-        uses: ./.github/actions/build-docker
+      - uses: actions/checkout@v3
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
         with:
-          sbx: ${{ secrets.MB_DTOS1_AZURE_DEV }}
-          context: './'
-          push: false
-          imageName: "tmp"
-          acrName: csgcrewdtos1
-          imageTag: ${{ env.GITHUB_WORKFLOW_RUN_ID }}
-          user: ${{ secrets.USER }}
-          apm: ${{ secrets.APM }}
-          githubToken: ${{ secrets.GITHUB_TOKEN }}
-          githubActor: ${{ secrets.GITHUB_ACTOR }}                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          
+          java-version: '17'
+          distribution: 'temurin'
+      - name: Build with Maven
+        run: mvn --batch-mode --update-snapshots package
